fix footer to bottom using flex on page-wrap

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,12 +36,17 @@ h3,
   font-size: 2rem;
 }
 
+.page-wrap {
+  min-height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .app-footer {
   height: 60px;
   width: 100%;
-  /* margin-top: auto; */
-  position: absolute;
-  bottom: 0;
 }
 
 .search-form {
@@ -51,10 +56,3 @@ h3,
   text-align: center;
   margin-top: 2rem;
 }
-
-/* @media (max-width: 760px) {
-  .search-results {
-    display: flex;
-    flex-wrap: wrap;
-  }
-} */
